--- a/index.html
+++ b/index.html
@@ -1961,7 +1961,7 @@
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
           <h3 style="color: var(--vert); margin-bottom: 0.7rem;">Refonte du site Medical Distribution</h3>
           <p style="color: var(--gris-texte); flex: 1;">Modernisation complète du site web pour une expérience utilisateur optimale, responsive et adaptée au secteur médical.</p>
-          <a href="#" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le projet</a>
+          <a href="medical-distribution.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le projet</a>
         </div>
       </div>
       <!-- Projet 2 -->
@@ -1972,7 +1972,7 @@
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
           <h3 style="color: var(--bleu); margin-bottom: 0.7rem;">Accompagnement Marketing Digital de Medical Distribution</h3>
           <p style="color: var(--gris-texte); flex: 1;">Rédaction, visuels et vidéos pour valoriser les produits et services de Medical Distribution sur le web et les réseaux sociaux.</p>
-          <a href="#" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
+          <a href="mdd.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
         </div>
       </div>
       <!-- Projet 3 -->
