Mise à jour du projet avec les dernières modifications

--- a/index.html
+++ b/index.html
@@ -1882,34 +1882,7 @@
 
 
   
-  <!-- Demande de devis 
-  <section id="devis" class="devis-section">
-    <div class="container">
-      <div class="section-header">
-        <h2>Demande de Devis</h2>
-        <p>Obtenez une estimation gratuite et personnalisée pour votre projet digital</p>
-      </div>
-      <form class="devis-form" id="devisForm">
-        <h3><i class="fas fa-file-signature"></i> Formulaire de devis</h3>
-        <input type="text" name="nom" placeholder="Votre nom complet" required>
-        <input type="email" name="email" placeholder="Votre adresse email" required>
-        <input type="tel" name="telephone" placeholder="Votre numéro de téléphone">
-        <label for="service-select" class="visually-hidden">Service concerné</label>
-        <select name="service" id="service-select" required>
-          <option value="">-- Sélectionnez un service --</option>
-          <option>Développement Web</option>
-          <option>Applications Mobiles</option>
-          <option>Marketing Digital</option>
-          <option>Solutions Cloud</option>
-          <option>Cybersécurité</option>
-          <option>Formation & Accompagnement</option>
-          <option>Plusieurs services</option>
-        </select>
-        <textarea name="besoin" rows="5" placeholder="Décrivez en détail votre projet ou besoin" required></textarea>
-        <button type="submit" class="btn btn-primary"><i class="fas fa-paper-plane"></i> Envoyer la demande</button>
-      </form>
-    </div>
-  </section> -->
+  
   
   <!-- Témoignages carrousel -->
   <section id="temoignages" class="temoignages-section">
@@ -1983,7 +1956,7 @@
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
           <h3 style="color: var(--vert); margin-bottom: 0.7rem;">Accompagnement Marketing Digital de MoTransfert</h3>
           <p style="color: var(--gris-texte); flex: 1;">Conception de supports digitaux, articles et vidéos pour renforcer la notoriété et l'engagement autour de MoTransfert.</p>
-          <a href="#" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
+          <a href="motransfert.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
         </div>
       </div>
     </div>
