--- a/wordpress.html
+++ b/wordpress.html
@@ -1,329 +1,220 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Sécuriser son site WordPress & Blog</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-<style>
-  /* Reset & base */
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #f9fafc;
-    color: #333;
-    margin: 0; padding: 0;
-    line-height: 1.6;
-  }
-  a {
-    color: #007BFF;
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
-  .container {
-    max-width: 720px;
-    margin: 2rem auto 4rem;
-    padding: 0 20px;
-    background: #fff;
-    border-radius: 12px;
-    box-shadow: 0 12px 35px rgba(0,0,0,0.1);
-  }
-  h1, h2, h3 {
-    font-weight: 700;
-    margin-bottom: 0.6rem;
-  }
-  h1 {
-    font-size: 2.8rem;
-    color: #0d47a1;
-    border-bottom: 3px solid #0d47a1;
-    padding-bottom: 0.3rem;
-    margin-top: 1.5rem;
-  }
-  h2 {
-    font-size: 1.8rem;
-    margin-top: 2rem;
-    color: #1565c0;
-    border-left: 6px solid #1565c0;
-    padding-left: 10px;
-  }
-  h3 {
-    font-size: 1.3rem;
-    color: #424242;
-  }
-  p {
-    margin-bottom: 1.2rem;
-  }
-  strong {
-    color: #0d47a1;
-  }
-  hr {
-    border: none;
-    border-top: 1.5px solid #eee;
-    margin: 2rem 0;
-  }
-  ul {
-    padding-left: 1.3rem;
-    margin-bottom: 1.5rem;
-  }
-  li {
-    margin-bottom: 0.5rem;
-  }
-  .emoji {
-    font-size: 1.3rem;
-    margin-right: 6px;
-  }
-  .tip {
-    background: #e3f2fd;
-    border-left: 4px solid #2196f3;
-    padding: 10px 15px;
-    margin: 0.8rem 0 2rem;
-    border-radius: 6px;
-    font-style: italic;
-    color: #0d47a1;
-  }
-  pre {
-    background: #263238;
-    color: #eceff1;
-    padding: 1rem 1.3rem;
-    border-radius: 8px;
-    font-family: 'Fira Mono', monospace, monospace;
-    font-size: 0.9rem;
-    overflow-x: auto;
-    margin-bottom: 2rem;
-  }
-  code {
-    font-family: 'Fira Mono', monospace, monospace;
-  }
-  blockquote {
-    background: #f1f8e9;
-    border-left: 6px solid #8bc34a;
-    margin: 1.5rem 0;
-    padding: 1rem 1.2rem;
-    font-style: italic;
-    color: #33691e;
-    border-radius: 6px;
-  }
-  .hashtags {
-    margin-top: 2.5rem;
-    text-align: center;
-  }
-  .hashtags span {
-    background: #e3f2fd;
-    color: #0d47a1;
-    padding: 6px 12px;
-    margin: 3px 4px;
-    border-radius: 20px;
-    font-weight: 600;
-    display: inline-block;
-    cursor: default;
-    font-size: 0.85rem;
-  }
-  .bonus, .summary {
-    background: #fbe9e7;
-    border-left: 6px solid #d84315;
-    padding: 1rem 1.2rem;
-    margin: 2rem 0;
-    border-radius: 6px;
-    color: #bf360c;
-  }
-  /* Section autres articles */
-  .other-articles {
-    margin-top: 4rem;
-  }
-  .other-articles h2 {
-    border-color: #d81b60;
-    color: #d81b60;
-  }
-  .article-item {
-    border: 1px solid #eee;
-    border-radius: 10px;
-    padding: 1rem 1.2rem;
-    margin-bottom: 1.5rem;
-    transition: box-shadow 0.3s ease;
-    background: #fafafa;
-  }
-  .article-item:hover {
-    box-shadow: 0 8px 20px rgba(216,27,96,0.3);
-  }
-  .article-date {
-    font-size: 0.9rem;
-    color: #999;
-    margin-bottom: 0.2rem;
-  }
-  .article-category {
-    display: inline-block;
-    font-size: 0.85rem;
-    font-weight: 600;
-    color: #d81b60;
-    border: 1px solid #d81b60;
-    padding: 2px 8px;
-    border-radius: 14px;
-    margin-bottom: 0.6rem;
-  }
-  .article-title {
-    font-size: 1.25rem;
-    color: #333;
-    margin-bottom: 0.5rem;
-  }
-  .article-description {
-    color: #555;
-    margin-bottom: 0.8rem;
-  }
-  .read-more {
-    font-weight: 600;
-    color: #d81b60;
-    font-size: 0.95rem;
-  }
-  .read-more:hover {
-    text-decoration: underline;
-  }
-
-  /* Responsive */
-  @media (max-width: 480px) {
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sécuriser son site WordPress & Blog</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f9fafc;
+      color: #333;
+      margin: 0; padding: 0;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 740px;
+      margin: 2rem auto 4rem;
+      padding: 0 20px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+    }
+    h1, h2, h3 {
+      font-weight: 700;
+      margin-bottom: 0.6rem;
+    }
     h1 {
-      font-size: 2.2rem;
+      font-size: 2.6rem;
+      color: #0d47a1;
+      margin-top: 2rem;
+      border-bottom: 2px solid #0d47a1;
+      padding-bottom: 0.4rem;
     }
     h2 {
-      font-size: 1.5rem;
+      font-size: 1.6rem;
+      margin-top: 2rem;
+      color: #1565c0;
+      border-left: 5px solid #1565c0;
+      padding-left: 10px;
+    }
+    h3 {
+      font-size: 1.2rem;
+      color: #424242;
+    }
+    p, li {
+      margin-bottom: 1rem;
+    }
+    .tip, .bonus, .summary, blockquote {
+      border-radius: 6px;
+      padding: 1rem;
+      margin: 1.5rem 0;
+    }
+    .tip {
+      background: #e3f2fd;
+      border-left: 4px solid #2196f3;
+      color: #0d47a1;
+      font-style: italic;
+    }
+    .bonus {
+      background: #fbe9e7;
+      border-left: 6px solid #d84315;
+      color: #bf360c;
+    }
+    .summary {
+      background: #fff8e1;
+      border-left: 6px solid #fbc02d;
+      color: #795548;
+    }
+    blockquote {
+      background: #f1f8e9;
+      border-left: 6px solid #8bc34a;
+      font-style: italic;
+      color: #33691e;
+    }
+    code {
+      background: #f1f1f1;
+      padding: 0.2rem 0.5rem;
+      border-radius: 4px;
+      font-family: monospace;
+    }
+    pre {
+      background: #263238;
+      color: #eceff1;
+      padding: 1rem;
+      border-radius: 8px;
+      overflow-x: auto;
+      font-size: 0.9rem;
+    }
+    .hashtags {
+      margin-top: 2rem;
+      text-align: center;
+    }
+    .hashtags span {
+      background: #e3f2fd;
+      color: #0d47a1;
+      padding: 6px 12px;
+      margin: 4px;
+      border-radius: 20px;
+      display: inline-block;
+      font-size: 0.85rem;
+      font-weight: 600;
+    }
+    .other-articles {
+      margin-top: 3rem;
+    }
+    .article-item {
+      background: #f4f4f4;
+      padding: 1rem;
+      border-radius: 10px;
+      margin-bottom: 1rem;
     }
     .article-title {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
+      margin: 0.3rem 0;
+      color: #222;
     }
-  }
-</style>
+    .read-more {
+      font-weight: 600;
+      color: #d81b60;
+      text-decoration: none;
+    }
+    .read-more:hover {
+      text-decoration: underline;
+    }
+    @media (max-width: 500px) {
+      h1 { font-size: 2rem; }
+      h2 { font-size: 1.4rem; }
+      .article-title { font-size: 1rem; }
+    }
+  </style>
 </head>
 <body>
 
-<nav class="navbar" id="navbar">
-  <div class="container nav-container">
-    <div class="nav-logo"><h2>Porokhane Digital</h2></div>
-  </div>
-</nav>
-
 <div class="container">
-  <!-- Article principal -->
   <h1>🔒 Sécuriser son site WordPress</h1>
   <p><strong>Protégez votre site WordPress contre les piratages</strong> avec 10 conseils simples et efficaces, accessibles à tous.</p>
-  <hr>
 
-  <h2><span class="emoji">🚀</span>10 conseils indispensables pour <strong>sécuriser votre site WordPress</strong> comme un pro</h2>
-  <p><strong>WordPress</strong> est une machine de guerre. Mais comme tout bon outil, il attire aussi les convoitises. Piratage, injections malveillantes, vol de données… il suffit d’une faille pour transformer votre site en cauchemar numérique. Heureusement, sécuriser son site WordPress <strong>n’est ni compliqué ni réservé aux experts</strong>.</p>
-  <p>Aujourd’hui, je partage avec vous <strong>les 10 bonnes pratiques essentielles</strong> pour protéger votre site, vos données, et la tranquillité de votre esprit.</p>
+  <h2>🚀 10 conseils indispensables</h2>
+  <p>WordPress est populaire, mais donc visé. Voici les 10 pratiques essentielles pour assurer votre tranquillité.</p>
 
-  <hr>
+  <h2>1. 🔄 Gardez tout à jour</h2>
+  <p>Mettez plugins, thèmes, et WordPress à jour. C’est vital.</p>
+  <div class="tip">👉 Utilisez les mises à jour automatiques ou <em>ManageWP</em>.</div>
 
-  <h2>1. <span class="emoji">🔄</span>Gardez tout à jour (plugins, thèmes, core WordPress)</h2>
-  <p>C’est la règle d’or. Les mises à jour corrigent souvent <strong>des failles de sécurité</strong>. Un plugin non mis à jour, c’est comme laisser la porte de votre maison grande ouverte en pleine nuit.</p>
-  <div class="tip">👉 <strong>Astuce</strong> : activez les mises à jour automatiques ou utilisez une extension comme <em>ManageWP</em> pour gérer plusieurs sites.</div>
+  <h2>2. 👨‍💻 Changez l’URL de connexion</h2>
+  <p>Ne laissez pas <code>/wp-admin</code> visible à tous.</p>
+  <div class="tip">👉 Utilisez <em>WPS Hide Login</em>.</div>
 
-  <hr>
+  <h2>3. 🔐 Mots de passe forts & 2FA</h2>
+  <p>Un mot de passe fort + 2FA = sécurité renforcée.</p>
+  <div class="tip">👉 Plugins : <em>Google Authenticator</em>, <em>WP 2FA</em>.</div>
 
-  <h2>2. <span class="emoji">👨‍💻</span>Changez l’URL de connexion par défaut</h2>
-  <p>Par défaut, tout le monde connaît <code>monsite.com/wp-admin</code>. Résultat ? Votre page de connexion est la cible d’attaques par force brute.</p>
-  <div class="tip">👉 <strong>Solution</strong> : utilisez un plugin comme <em>WPS Hide Login</em> pour personnaliser l’URL de connexion.</div>
+  <h2>4. 🧱 Limitez les tentatives</h2>
+  <p>Empêchez les attaques par force brute.</p>
+  <div class="tip">👉 Installez <em>Limit Login Attempts Reloaded</em>.</div>
 
-  <hr>
+  <h2>5. 🚫 Supprimez les plugins inutilisés</h2>
+  <p>Ne gardez que ce que vous utilisez.</p>
+  <div class="tip">👉 Supprimez les extensions inactives.</div>
 
-  <h2>3. <span class="emoji">🔐</span>Mots de passe béton & double authentification</h2>
-  <p>Les mots de passe faibles, c’est fini ! Utilisez un générateur de mots de passe complexes et activez la <strong>double authentification</strong>.</p>
-  <div class="tip">👉 <strong>Plugins recommandés</strong> : <em>Google Authenticator</em>, <em>WP 2FA</em>, <em>Authy</em>.</div>
+  <h2>6. 🧪 Analysez régulièrement</h2>
+  <p>Scannez pour détecter des fichiers suspects.</p>
+  <div class="tip">👉 Plugins : <em>Wordfence</em>, <em>Sucuri</em>.</div>
 
-  <hr>
+  <h2>7. 🔐 Changez le préfixe des tables</h2>
+  <p>Ne laissez pas <code>wp_</code> comme préfixe.</p>
+  <div class="tip">👉 Changez-le à l’installation ou via plugin.</div>
 
-  <h2>4. <span class="emoji">🧱</span>Limitez les tentatives de connexion</h2>
-  <p>Un hacker peut essayer des milliers de combinaisons s’il n’est pas limité.</p>
-  <div class="tip">👉 Installez <em>Limit Login Attempts Reloaded</em> ou <em>Login LockDown</em> pour bloquer les IP trop insistantes.</div>
+  <h2>8. 🛡 Activez un pare-feu</h2>
+  <p>Filtrez les attaques en amont.</p>
+  <div class="tip">👉 <em>Cloudflare</em> ou <em>Wordfence Premium</em>.</div>
 
-  <hr>
+  <h2>9. 📦 Sauvegardes régulières</h2>
+  <p>Créez des sauvegardes automatiques.</p>
+  <div class="tip">👉 Plugins : <em>UpdraftPlus</em>, <em>BlogVault</em>.</div>
 
-  <h2>5. <span class="emoji">🚫</span>Supprimez les plugins et thèmes inutilisés</h2>
-  <p>Chaque extension ou thème inactif est une <strong>porte potentielle</strong> pour une attaque. Même désactivé, un plugin peut être vulnérable.</p>
-  <div class="tip">👉 Supprimez-les complètement.</div>
-
-  <hr>
-
-  <h2>6. <span class="emoji">🧪</span>Analysez votre site régulièrement</h2>
-  <p>Faites des scans réguliers pour détecter d’éventuelles menaces.</p>
-  <div class="tip">👉 <strong>Plugins utiles</strong> : <em>Wordfence</em>, <em>Sucuri Security</em>.</div>
-
-  <hr>
-
-  <h2>7. <span class="emoji">🔐</span>Changez le préfixe des tables de votre base de données</h2>
-  <p>Par défaut, WordPress utilise le préfixe <code>wp_</code>. C’est connu de tous les hackers.</p>
-  <div class="tip">👉 Pendant l’installation (ou via un plugin), changez-le pour quelque chose comme <code>mdbl2025_</code>.</div>
-
-  <hr>
-
-  <h2>8. <span class="emoji">🛡</span>Installez un pare-feu (Firewall)</h2>
-  <p>Un pare-feu protège votre site des attaques en amont, avant qu’elles ne touchent le code.</p>
-  <div class="tip">👉 <strong>Solutions</strong> : <em>Cloudflare</em> (gratuit) ou le pare-feu inclus dans <em>Wordfence Premium</em>.</div>
-
-  <hr>
-
-  <h2>9. <span class="emoji">📦</span>Sauvegardes régulières (oui, <em>régulières</em>)</h2>
-  <p>En cas d’attaque, une <strong>sauvegarde récente</strong> peut sauver votre business.</p>
-  <div class="tip">👉 Plugins recommandés : <em>UpdraftPlus</em>, <em>BlogVault</em>, <em>BackupBuddy</em>.</div>
-
-  <hr>
-
-  <h2>10. <span class="emoji">🔍</span>Cachez la version de WordPress</h2>
-  <p>Certains hackers exploitent des failles propres à une version précise. Ne leur donnez pas cette info.</p>
-  <div class="tip">👉 Supprimez la ligne suivante dans le fichier <code>functions.php</code> de votre thème :</div>
-  <pre><code>remove_action('wp_head', 'wp_generator');</code></pre>
-
-  <hr>
+  <h2>10. 🔍 Cachez la version WordPress</h2>
+  <p>Évitez de révéler la version du CMS.</p>
+  <div class="tip">👉 Supprimez dans <code>functions.php</code> : <code>remove_action('wp_head', 'wp_generator');</code></div>
 
   <div class="bonus">
-    <h3>🎁 Bonus : un plugin tout-en-un pour la sécurité ?</h3>
-    <p>Si vous préférez une solution centralisée :</p>
-    <p>✅ <strong>Wordfence</strong> ou <strong>iThemes Security</strong>. Ils offrent tout : scan, firewall, 2FA, alertes mails, logs…</p>
+    <h3>🎁 Bonus</h3>
+    <p>Plugins sécurité tout-en-un : <strong>Wordfence</strong> ou <strong>iThemes Security</strong>.</p>
   </div>
-
-  <hr>
 
   <div class="summary">
     <h3>🧠 En résumé</h3>
-    <p>Sécuriser son site WordPress n’est pas une option, c’est une <strong>responsabilité</strong>. Que vous soyez freelance, entrepreneur, ou blogueur passionné, prenez ces mesures aujourd’hui et dormez (beaucoup) plus tranquille. 😴</p>
-    <blockquote>Un site piraté, c’est du stress, du temps perdu, de l’argent gaspillé. Un site sécurisé, c’est de la crédibilité gagnée.</blockquote>
+    <p>Ne laissez pas votre site sans défense. Appliquez ces conseils et sécurisez-le dès aujourd’hui.</p>
+    <blockquote>Un site piraté, c’est du stress. Un site protégé, c’est la sérénité.</blockquote>
   </div>
 
-  <hr>
-
-  <h3>📢 Et vous ? Quelle solution utilisez-vous pour sécuriser votre site WordPress ? Partagez vos astuces en commentaire ! 👇</h3>
+  <h3>📢 Et vous ? Partagez vos astuces WordPress en commentaire 👇</h3>
 
   <div class="hashtags">
-    <span>#WordPressSecurity</span>
-    <span>#Cybersécurité</span>
-    <span>#BlogWP</span>
+    <span>#WordPress</span>
+    <span>#Sécurité</span>
+    <span>#BlogSEO</span>
     <span>#WebTips</span>
-    <span>#ProtégerSonSite</span>
-    <span>#WPFrance</span>
+    <span>#ProtectionWP</span>
   </div>
 
-  <!-- Autres articles -->
   <section class="other-articles">
-    <h2>📚 Autres articles du blog</h2>
+    <h2>📚 Autres articles</h2>
 
-    <article class="article-item">
-      <div class="article-date">10 juin 2024 • SEO</div>
-      <div class="article-category">SEO</div>
-      <h3 class="article-title">Algorithme Google SEO 2024 : 10 astuces pour être visible</h3>
-      <p class="article-description">Découvrez les nouvelles règles Google pour 2024 et 10 astuces pour rendre votre site visible et performant.</p>
-      <a href="#" class="read-more" aria-label="Lire l'article Algorithme Google SEO 2024">Lire l'article →</a>
-    </article>
+    <div class="article-item">
+      <div class="article-title">🚀 SEO Google 2024 : 10 astuces à connaître</div>
+      <p>Les dernières tendances SEO expliquées simplement pour booster ton site.</p>
+      <a class="read-more" href="#">Lire l’article →</a>
+    </div>
 
-    <article class="article-item">
-      <div class="article-date">5 juin 2024 • SEO</div>
-      <div class="article-category">SEO</div>
-      <h3 class="article-title">SEO : 14 outils gratuits pour trouver des mots-clés pertinents</h3>
-      <p class="article-description">Voici 14 outils gratuits pour trouver les meilleurs mots-clés et booster votre référencement sur Google.</p>
-      <a href="#" class="read-more" aria-label="Lire l'article SEO 14 outils gratuits">Lire l'article →</a>
-    </article>
+    <div class="article-item">
+      <div class="article-title">🔎 14 outils SEO gratuits à tester</div>
+      <p>Les meilleurs outils pour trouver des mots-clés et analyser ton trafic.</p>
+      <a class="read-more" href="#">Lire l’article →</a>
+    </div>
   </section>
 </div>
 
