Mise à jour du projet avec les dernières modifications

--- a/mdd.html
+++ b/mdd.html
@@ -526,15 +526,6 @@
       <div class="galerie-item">
         <img src="MDD/Roulante.png" alt="Post LinkedIn 1">
       </div>
-      <div class="galerie-item">
-        <img src="MDD/Zoom_sur_notre_iso_13485_dispositifs_medicaux_senegal.png" alt="Post LinkedIn 2">
-      </div>
-      <div class="galerie-item">
-        <img src="MDD/Zoom_sur_notre_materiel_de_soins_medicaux_Senegal.png" alt="Article SEO">
-      </div>
-      <div class="galerie-item">
-        <img src="MDD/Zoom_sur_notre_vente_de_materiels_medicaux.png" alt="Graphique SEO">
-      </div>
     </div>
   </section>
 
@@ -608,10 +599,8 @@
     const images = [
       "MDD/Decouvrez_nos_instruments_innovants.png",
       "MDD/MUCOSITE.png",
-      "MDD/Roulante.png",
-      "MDD/Zoom_sur_notre_iso_13485_dispositifs_medicaux_senegal.png",
-      "MDD/Zoom_sur_notre_materiel_de_soins_medicaux_Senegal.png",
-      "MDD/Zoom_sur_notre_vente_de_materiels_medicaux.png"
+      "MDD/Roulante.png"
+      
     ];
   
     let currentIndex = 0;
