Mise à jour du projet avec les dernières modifications

--- a/mdd.html
+++ b/mdd.html
@@ -6,8 +6,7 @@
   <title>Projet SEO & Réseaux Sociaux | Porokhane Digital</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  
   <style>
     :root {
       --bleu: #2563eb;
@@ -528,6 +527,15 @@
       </div>
     </div>
   </section>
+
+<!-- Réseaux sociaux Medical Distribution -->
+<section class="social-mdd" style="text-align:center; margin: 2.5rem 0 3.5rem 0;">
+  <h2 style="color:var(--bleu); font-size:1.4rem; margin-bottom:1.2rem;">Retrouvez-nous sur les réseaux sociaux</h2>
+  <div style="display:flex; justify-content:center; gap:2rem;">
+    <a href="https://www.linkedin.com/company/medical-cabinet" target="_blank" rel="noopener" style="display:inline-flex; align-items:center; gap:0.7rem; background:#0077b5; color:#fff; padding:0.8rem 1.6rem; border-radius:30px; font-weight:600; font-size:1.1rem; text-decoration:none; transition:background 0.2s;"><i class="fab fa-linkedin-in" style="font-size:1.3rem;"></i> LinkedIn</a>
+    <a href="https://www.facebook.com/medicaldistributions/" target="_blank" rel="noopener" style="display:inline-flex; align-items:center; gap:0.7rem; background:#1877f3; color:#fff; padding:0.8rem 1.6rem; border-radius:30px; font-weight:600; font-size:1.1rem; text-decoration:none; transition:background 0.2s;"><i class="fab fa-facebook-f" style="font-size:1.3rem;"></i> Facebook</a>
+  </div>
+</section>
 
   <div class="cta-devis">
     <h3>Besoin d'une stratégie digitale complète ?</h3>
