--- a/marketing.html
+++ b/marketing.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marketing Digital | Porokhane Digital Consulting</title>
   <meta name="description" content="Services de marketing digital : Audit Express, Création de sites, Stratégie digitale, SEO et Réseaux sociaux.">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     :root {
       --vert: #1fa47a;
