--- a/erp.html
+++ b/erp.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ERP (Enterprise Resource Planning) - Porokhane Digital Consulting</title>
   <meta name="description" content="ERP sur mesure pour la gestion intégrée de votre entreprise. Analyse, développement, déploiement, formation et accompagnement.">
- 
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     :root { --vert: #1fa47a; --vert-clair: #d1fae5; --bleu: #2563eb; --bleu-clair: #dbeafe; --blanc: #fff; --gris-bg: #f6f8fa; --gris-texte: #64748b; --gris-titre: #1e293b; --ombre: 0 4px 24px rgba(0,0,0,0.08); --rayon: 18px; --rayon-grand: 28px; }
     * { box-sizing: border-box; margin: 0; padding: 0; }
